# HomePlayer

./: .gitignore  AndroidManifest.xml  README.md  build.gradle  connect.bat  info.txt
files/: array-resize.drawio  ffmpeg_audio_codecs.txt  ffmpeg_audio_extensions.txt  ffmpeg_build.sh  ffmpeg_convert_formats.bat  ffmpeg_convert_params.bat  ffmpeg_info.txt
files/eq/: eq_design.psd
files/icons/: audio_loop_24dp.ai  audio_trim_24dp.ai
jni/: Android.mk  Application.mk  AudioDecoder.cpp  AudioDecoder.h  AudioFilter.cpp  AudioFilter.h  AudioUtilsNative.cpp  CMakeLists.txt  DecoderNative.cpp  EngineNative.cpp  FilePlayer.cpp  FilePlayer.h  defs.h
jni/utils/: LockFreeQueue.h  logging.h
libs/: natural-comparator-1.1.jar.bak
release/: homeplayer-release-key.jks
res/color/: control_button_background.xml  danger_button_background.xml  eq_button_background.xml  list_item_background.xml  list_item_button_background.xml  list_item_cue_background.xml  list_item_toggle_button_background.xml  looper_enable_button_background.xml  panel_toggle_button_background.xml  secondary_button_background.xml  toggle_button_background.xml
res/drawable/: control_button_background.xml  list_item_background.xml  list_item_button_background.xml  panel_toggle_button_background.xml  secondary_control_button_background.xml  secondary_toggle_button_background.xml  toggle_button_background.xml
res/layout/: activity_main.xml  browser_list_item.xml  divider_horizontal_include.xml  divider_vertical_include.xml  main_equalizer_panel.xml  main_extra_controls_panel.xml  main_extra_info_panel.xml  (+6 more)
(+80 files in other folders)
